--- a/.github/ISSUE_TEMPLATE/new-prediction.yml
+++ b/.github/ISSUE_TEMPLATE/new-prediction.yml
@@ -1,14 +1,11 @@
 name: New prediction
 description: Create new prediction
 title: "[PRED] "
-labels: ["prediction"]
 body:
   - type: input
     id: author-name
     attributes:
       label: Author Name
-      description: 
-      placeholder:
     validations:
       required: true
 
@@ -16,88 +13,62 @@ body:
     id: author-id
     attributes:
       label: Author ID
-      description: 
-      placeholder: 
     validations:
       required: false 
 
   - type: textarea
-    id: statement.ru
+    id: statement-ru
     attributes:
       label: Statement [ru]
-      description: 
-      placeholder: 
-      rows: 5
     validations:
       required: true
 
   - type: textarea
-    id: context.ru
+    id: context-ru
     attributes:
-      label: Context [ru]
-      description: 
-      placeholder: 
-      rows: 5
+      label: Context [ru] 
     validations:
       required: false
 
   - type: textarea
-    id: notes.ru
+    id: notes-ru
     attributes:
       label: Notes [ru]
-      description: 
-      placeholder: 
-      rows: 5
     validations:
       required: true
 
   - type: textarea
-    id: title.ru
+    id: title-ru
     attributes:
       label: HTML Title [ru]
-      description: 
-      placeholder: 
-      rows: 5
     validations:
       required: true
 
   - type: textarea
-    id: statement.en
+    id: statement-en
     attributes:
       label: Statement [en]
-      description: 
-      placeholder: 
-      rows: 5
     validations:
       required: true
 
   - type: textarea
-    id: context.en
+    id: context-en
     attributes:
       label: Context [en]
-      description: 
-      placeholder: 
-      rows: 5
     validations:
       required: false
 
   - type: textarea
-    id: notes.en
+    id: notes-en
     attributes:
       label: Notes [en]
-      description: 
-      placeholder: 
-      rows: 5
     validations:
       required: true
 
   - type: textarea
-    id: title.en
+    id: title-en
     attributes:
       label: HTML Title [en]
-      description: 
-      placeholder: 
-      rows: 5
     validations:
       required: true
 
@@ -105,7 +76,6 @@ body:
     id: original-language
     attributes:
       label: Original Language
-      description: 
       placeholder: ru
     validations:
       required: true
@@ -114,7 +84,6 @@ body:
     id: time-statement
     attributes:
       label: Statement Date
-      description: 
       placeholder: YYYY-MM-DD
     validations:
       required: true
@@ -123,7 +92,6 @@ body:
     id: time-awaiting
     attributes:
       label: Due Date
-      description: 
       placeholder: YYYY-MM-DD
     validations:
       required: false
@@ -132,7 +100,6 @@ body:
     id: time-verified
     attributes:
       label: Outcome Date
-      description: 
       placeholder: YYYY-MM-DD
     validations:
       required: false
