--- a/.github/ISSUE_TEMPLATE/new-prediction.yaml
+++ b/.github/ISSUE_TEMPLATE/new-prediction.yaml
@@ -1,6 +1,6 @@
 name: New prediction
 description: Create new prediction
-title: "[PREDICTION] "
+title: "[NEW-PREDICTION] "
 body:
   - type: input
     id: author-id
